crates/scribe-core/tests/snapshots/fixtures__svg-line-break-tspan-paragraph.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="480" height="280" viewBox="0 0 480 280" role="img" aria-label="Reading Machines The quick brown fox jumps over the lazy dog, and does it again on the next line. Printed in 1996 at Leyden.">
  <style>
    .scribe-text { user-select: text; -webkit-user-select: text; white-space: pre; }
    .scribe-text::selection, .scribe-text ::selection { fill: #000; background: rgba(0, 90, 255, 0.35); }
  </style>
  <image href="paragraph.png" width="480" height="280"/>
  <g class="scribe-text" font-family="sans-serif" fill="transparent">
    <text class="scribe-line"><tspan class="scribe-word" x="33" y="57" font-size="35" textLength="118" lengthAdjust="spacingAndGlyphs">Reading</tspan> <tspan class="scribe-word" x="162" y="51" font-size="25" textLength="134" lengthAdjust="spacingAndGlyphs">Machines</tspan><tspan class="scribe-break">&#10;</tspan></text>
    <text class="scribe-line"><tspan class="scribe-word" x="31" y="107.6" font-size="17" textLength="37" lengthAdjust="spacingAndGlyphs">The</tspan> <tspan class="scribe-word" x="74.63" y="110.58" font-size="21.4" textLength="50.73" lengthAdjust="spacingAndGlyphs">quick</tspan> <tspan class="scribe-word" x="131" y="106.6" font-size="17" textLength="58" lengthAdjust="spacingAndGlyphs">brown</tspan> <tspan class="scribe-word" x="196" y="107.4" font-size="18" textLength="27" lengthAdjust="spacingAndGlyphs">fox</tspan> <tspan class="scribe-word" x="229" y="109.8" font-size="21" textLength="57" lengthAdjust="spacingAndGlyphs">jumps</tspan><tspan class="scribe-break">&#10;</tspan></text>
    <text class="scribe-line"><tspan class="scribe-word" x="32" y="144.2" font-size="14" textLength="43" lengthAdjust="spacingAndGlyphs">over</tspan> <tspan class="scribe-word" x="81" y="143.4" font-size="18" textLength="31" lengthAdjust="spacingAndGlyphs">the</tspan> <tspan class="scribe-word" x="118" y="145" font-size="20" textLength="38" lengthAdjust="spacingAndGlyphs">lazy</tspan> <tspan class="scribe-word" x="167" y="145.2" font-size="19" textLength="35" lengthAdjust="spacingAndGlyphs">dog,</tspan> <tspan class="scribe-word" x="210" y="143.4" font-size="18" textLength="34" lengthAdjust="spacingAndGlyphs">and</tspan> <tspan class="scribe-word" x="257" y="143.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">does</tspan><tspan class="scribe-break">&#10;</tspan></text>
    <text class="scribe-line"><tspan class="scribe-word" x="31" y="180.2" font-size="19" textLength="14" lengthAdjust="spacingAndGlyphs">it</tspan> <tspan class="scribe-word" x="51.67" y="183.08" font-size="23.3" textLength="52.66" lengthAdjust="spacingAndGlyphs">again</tspan> <tspan class="scribe-word" x="110" y="179.8" font-size="16" textLength="22" lengthAdjust="spacingAndGlyphs">on</tspan> <tspan class="scribe-word" x="139.26" y="178.8" font-size="17.94" textLength="31.47" lengthAdjust="spacingAndGlyphs">the</tspan> <tspan class="scribe-word" x="176" y="180" font-size="15" textLength="42" lengthAdjust="spacingAndGlyphs">next</tspan> <tspan class="scribe-word" x="225" y="179.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">line.</tspan><tspan class="scribe-break">&#10;</tspan></text>
    <text class="scribe-line" transform="rotate(0.53 111.5 236.5)"><tspan class="scribe-word" x="30.99" y="239.14" font-size="12" textLength="44" lengthAdjust="spacingAndGlyphs">Printed</tspan> <tspan class="scribe-word" x="77.98" y="238.65" font-size="13" textLength="12" lengthAdjust="spacingAndGlyphs">in</tspan> <tspan class="scribe-word" x="94.99" y="238.62" font-size="12" textLength="29" lengthAdjust="spacingAndGlyphs">1996</tspan> <tspan class="scribe-word" x="127.99" y="238.59" font-size="11" textLength="12" lengthAdjust="spacingAndGlyphs">at</tspan> <tspan class="scribe-word" x="144" y="241.28" font-size="16" textLength="48" lengthAdjust="spacingAndGlyphs">Leyden.</tspan></text>
  </g>
</svg>
