crates/scribe-core/tests/snapshots/fixtures__svg-paragraph.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="scribe-xn3jur" class="scribe-xn3jur-root" width="480" height="280" viewBox="0 0 480 280">
  <style>
    #scribe-xn3jur { color-scheme: light dark; }
    #scribe-xn3jur .scribe-xn3jur-text { all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre; }
    #scribe-xn3jur .scribe-xn3jur-text text, #scribe-xn3jur .scribe-xn3jur-text tspan { fill: inherit; stroke: inherit; font-family: inherit; font-style: inherit; font-weight: inherit; font-variant: inherit; font-stretch: inherit; letter-spacing: inherit; word-spacing: inherit; text-anchor: inherit; text-decoration: inherit; text-transform: inherit; direction: inherit; unicode-bidi: isolate; white-space: inherit; user-select: inherit; -webkit-user-select: inherit; }
    #scribe-xn3jur .scribe-xn3jur-text::selection, #scribe-xn3jur .scribe-xn3jur-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAeAAAAEYCAAAAAChfno9AAAq4UlEQVR4Ae3AA6AkWZbG8f937o3IzKdyS2Oubdu2bdu2bdu2bWmMnpZKr54yMyLu+Xa3anqmhztr1a+aq/4PI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vo/Jf4B+G7YcDPG699Qj+K128lYft8Byest+/GP9/IPMvOfotAOrJ627m3+aW21/v1wEe+eRX+33+1e77M+CNKs908DvAa+zwovihd+UX3pTn8Pq/cdPt/P9B5V90z5vzTA95x0/d4b/cn7858HNvzjP94AcBf/kyXPWiIPhXePqXPPZW/nt8N/f7bq560VF5Ubz6T8P6tt/4skt3vt2fi3+z3xjn/Jtce+/Pnz/FZU/4I669l3+771tW/h8heFHUU6dO3fDKn/Y7PX/5B/zb3fzQG/g3eYfZ+oe44ru55g34d7j+obfw/wiVf4WXersf4vdenWd62m3nrnvUGZ7l8NY798489GYe4ClPHh/8EuL5+/unbb7ENTzbbU/av/FlK8/Pybf48e/+cADa9/HuF3mW1a13Xjj94IfwQLfedt+JGx9ReJbdv77wyEd1PD9PflJ58Zt4gDuffs/ph93Ms+zeeluevubhwf9SBP8aLwZ3cVl+y0s+7HXe4TVueOu/57LV177hyRd/o3d47Qe98s9zvz96jUe86Vu91CN/hvu92Px1AXip+avy6y/+Em/1+te+3BN4pr97kwe/wdu+0s1fz1vOH8TzeG/+4u8B+NW7eC+eKb/lLU4+5vXf8XUf+tI/yP3aN7z0Q17rHV7/MTd8yHmuOPjgG17n7V5i+4uTy95k/nAA3mJ+E3/5yo988ze5+RF/zP1+6jVveo13eJ0HvfZvc8Xfv8vpl3mrt3mNR13/rgP/OxH8axzAFgD7b/vBf0e5VtPPvOovAXDPR/3awIlT+E/e8ku44pde7/fhhvqUt/kOnmlcDwAM6/G73+gfmMNfvvxfctkfvuYvm2sX93zEx43rgefxRtfz3QB8Ny/7kjzT+oN/fsnOGfibd/tYAOD8m3z438CZOfd98+1ctvdq37Lsg/WnvCeXjes1AON6+NVX/RPm8JTX/EUumz7qbX8PXVv8O2/wzQA8/tV+uNXrHtxz3w+N/O9E8K/xh/BwAN73Z3iNPzy858I3be6/6x0AXPuJf3HpwrlL33KDP+1PALj7nZf6jHvu3P3R7Y+4wHO79YNv+smzR097Vw4/E4D9d9zlQ26/59IfPfqr/ozno747PzABF36G9+ZZTnzEH124dN/+DzyUr/oFAPKdf40H//TZ+w5v/9aX4YqP/7sP/vvDSz9xmh/8C57T4Ttvffedyzs+RuOnGIDP+Voe84v79+z9xLXTh/8xwHvvzb754t1PX97xTa/C/1IELzp/7e9y7O0BfuzHeYffeZUZxz/4l7T7aQA33v4lL7sDOx/4y4v2dQB82h5f9bnXsvkOv9sOeW7nbvybtzmth/zAa/ALTwT4kjv5pG+8ie6V/+gR53l+3pt7fhn44XX/rtxvfufXvvIJ2HrX3zrJVwPwzb/Oq//1W50mbvqAv3wJLrvza7/pxerW2/4Q/iqe05H/6r1u4MavfFf+9tcB/uqLebm/epNNNt72TzbbRwNHf8nHfNAWxI0f/Ieb/O9E8KK49/u+7/u+/TNe9aMo33gM4Bs58c0C4DXekZ9eAV3HFS/xtvxCAusf45YPBeCl3o3n9aXHAfhQeALAD7PzyQAc/ySer8e+It8NfDdvcYr7acEVt7w3v7MH8M3E1x3jisJlL/OhALz+o3g8z+Uzbgbgw+DxAN8y6XtnADzo4/mTp8EdE7fwvxzBi+Lx7/me7/kBn//HvOovvSvAvb/La5/kitdh76+539HZs2cfwu4F4HcPeN+Oyz6Y51HeAgAeBc8AnvJU3vY4l717x/P1Xvz8ef7+z3hvnsvq7NmzD2K8HXji3/GmL81zeovgskfyDJ7LW3PZI+EZQP4kj34sV7wO/C48uPJ1T+d/Nyr/GmdeFoAnJu1bMQY/Hu4G4B++6k/vvMBl952Gp8IjueKRPI8H9QBwHdwN3A4P4Yr+xlt5ft7l41Y/9OHfzXVvzAM89at//47zBuC+F4Mnw0vwXB7BFddxfuh5oP5BXHaqH+4Gzp5l+1sxBl+Au6F/n297/CPf4A1f86WD/7WovChe+7fgwt9/2c//zDP+cAHcDT/7szzLecAf9O0GoqNNrID74BauOL6zx3M5CQAUSOA+uJlnuvlWnp8Tb/mj3/3BP8C7V57tU7+0AerJkSVwNzyU53KSKwokz+FY4YoggXvgT/+UZzkPfPmlH51+6Ze49s0/6BX4X4rKi+rka776u/3wX3/i1wFreNWH8iwPA77i23iF93+dU8eDr/4YAAzimcS/YAZLnmnJ8/feP/oXX3YP78Wzfd8X8WIf9PrXHC/80LsCYAj+rdbwYi/Ds7wssPMjH/kTP/9k7v2O7/ror+B/Jyovuvjm37zvmz74xeAGeL3P5YH8Bbzsb28A8AwuuwZu54q9S/wLroHbeKbbeP7e8Ia7PpOXf3Ge7fN52O+eBOAZXHY9PJV/qxvgsd/Hc3m1V/vKO3/jp342v/Jl3p3/lQj+FY59Pu3TgIfBn/Ecbt3lHTa47Mlc9hB4Clc8mX/Joyt/xRV3nOX5K+/BxHvzbAdP4S1OAsCTuezh8Hj+ra7b4M94Pm58z5/6peAH+d+J4F/jvR/Kz/4lPOTl+a3H8UC3wSkue/qvc9lrbfBdjcu+nX/JyVfl1/6Oy77KvADvdd11N70Lz3ZncorLzv8klz3msfzc4/g3qm/Lrb/I8/WGD+Gp/O9E8K/RfSr+HOBDWL/fkme6A3gU/AYA7ePWXLZ4a576nQA86Xv4F304/qBzAL/6Lbwgj7n77ttP8mwP6fhNA/hTd7niA5k+6oh/ow8SH3SWZ7oDuHDEFet7eRT/OxH8q7znQ/i5v4D3eWv++MV++gCmZ3z7K709cN1j+ZHPX+MnvcFPneSKL9rgg7/igOlXXq0t+Je8wxvzR6/0Jb/+Ix/+ZrOX4EXUvzq/9XEHcNvbfutJrvjwV+fXX/63l7D3I6/91/wrvfoncsdjvu0C5F0/9kYvCfzejR/+Z0fAk9/ugDfkfyeCf5Xu0/DngL77rXn62+zc9NCNB3/AnwLwHYXPOPnipx/1W6/wyVxxy/d2+fHHH3P8jc992Wn+RT/2ejztk9/gnb9h60euYYMXzTct+KozL3bdg376kV/EFeXHXoXHv872I84ce+ff4V/t8z9C5z/w1DWP3LzxHX81AXa/4RW3bnyZmx71C7zjh/K/E8G/zns+hJ//czj2k9/x8vjOp49c/8FfCvDKv/5Yjv7hwsaH/tacZ3q7X3op2hMOr/++j+RftvXL3/ea12488qP+6vVv4wwvmkf97iuwety9/Xv88XGe6brf/rybaU85x4n3uYl/rfq1P/d6wdknrzj+bt8NvNh7Pwjf9dd3+qHf+L3B/07I/Fs97al39Tfe+JDgiukJTzy8/pW3eQD/1ZOmB79y5V9j2hze9id4EeWTnrB73Sud4IHa39x+7pobXqLn3+TuJ9yVN9z4sA4AeMat9xzddMvDC/9bIfM/y7d+EN/0wVz1HwSZ/xHuOt0D8ITXum/+1Bu46j8Ilf8ZfvhL3/tVHzJ70u9/9ZrPuoGr/qNQ+R/i3i/hMn3sx3PVfxgq/zO8zdGvP/7C1F/3Bu/zalz1HweZ/zHyYFtc9R8Kmav+DyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygqv+LyO46v8ygn+NX/8h/vVW3//HPNDffP8FnsNffP8e/z7rP/jh71/yQtzx/U/h/yUqL9zhG/Asb/VJX/wH78K/2t57vN8r8wA/8Xl/cZIH+oGveuIO/x5Pf8OnwOsteMH+4j2+/eH8f0TlXzABq787/ggg+TfpXuEh/Of6/Kf9zGvULV6IE69wmv+XqLxwm38KPO7FXvUX+Dc78af8J/ubm9+SF+41/5T/n6j8K936G095zDvOAXjS7z/xpld/GZ7tnl968ku9Xv72yzyCs7/1Uo8C7vndl30465956MsD/O2fPGnnpd5oxhX586vXOcP97vzNx734mx0H/vpJb3Lpx5/xlq/D7q/+3ebLvEHA3z3+jY7BH97xsg+HJ//Va1+z+6uPeezv/l7/uq/IMz3+7+6MH+VBrwRP+N2nPuQ1Xgzu/Z1rXwuYfrq8tQDgrt9/hYdw7jdf8tHAvb/zsg/n4Bcf+eK/+wf59i/G+R96xsPf+RjwO+fe7om/dcfLvVkP8De/dtfmza/7cP63o/Kv86tvrWn4it89Bu2LPrddd7Z93JeIZ/rjt7nnzOGpz/yAr/ponvBOX/oJwF+/0zc8nEvv9H7fDoef8M2+bu/og76Zy9bv9aOf+47c7y8/tJWLD/+5R8P3fPU3ftJhf/J1fv/dbjuxXL3u91/PP7zLD7wrvM+TPvib4Eu+826e8U6fcOuPHd+Nr/horvjpz2y8G+/ySnzRZ03X3Bef9llx6hv+4DdfEz79S75IAMCfvdO3vx9PfKcvfjTwN+/0dR/O3e/04Wd/dOfSF/zkdW+62x191e+dgc//Pb3z8cOj1/jJ0/DJX9rfeHD29H38b0fwrzJ84E/v73/0334N8K2f8a5n79x9vy/7QZ5p9farX7tv9/0+nOfrU7/pXe+7++Av3ggALr7hT37Xp/Ms7/dFF87/4O3vaoBP/Lzdow/de9u9Xzp/6fN+64PgdfQbcPuTjv0G8Bsvfi3wDbr34hNu+bT7uOJTxoc9chy/l5/+1Je/7Z47X+1zf5D6gyfe9Ry//GVv9Im8YN+R9+3+Qf8R7/xZB3uf98SvAhg+6Ofuu/T5v/cx8IQveduzT7337Jfxvx7Bv0p+0RtG/0U7vwYHn/Ey33GSjW94+BfwTN9956e/Pt1nvSLPz5O+4eW+7wx62bcB4Bmv/te/8F4821t/UNG7fOBf/QLAu33Utk597dnPeWP1n/5GP/cnXPvivwG/wcc9+TaeeuvrAVzzvdfwqI87+gOe02f0P3IT1//o/DPgxu+96z3veM/rvjd4wU5892le9e1ufY0P68snn/o1AH/cG1E/7bV/6Gk8kTfahlPvxf96BP86bwzMH3wb/P3517tw3333XXjZJw1c8ae8I8A78fz8cfsAcb+/fJXd33kDHuAdAd6JPwV4G4A/410B3o0/h9d7xlP4zUe8D7/Bb/C6AK8zAx7DbTyHo394jZuBa1//1nPwJp/wSy9/4Qeu4YV4jQ3gEbwhUB9yOwDvCPBO7S94bPmCH7zA/wUE/yrzEwAbS3gSX37Ntddee92Ptju44un1BoBbeH6exMN4lg+658dfmge6BeAWng5wM8DTtk4DPJinwuvyG/zG6930qN/gN+trAVwHsGDJc3i6HwTAg3kq8Pk33Pthr80Lcx3AnOsAFksA3QRwC0/nEd9w7t3OvNzn7fG/HsG/0YyP+d3f/d3f/d3f/d3ruWKjjQBLnm3ifpsc8SxfsHj3W3mgJcCSDYAOYGPdAJZswmvV33j8Xa/P6/1m/uYr7ACI52eDFQBLNoDvvks/fYHna+IF8BpgyQZ80D0/8cG7n/ly+/xvR/Bv9Fj2X+M1XuM1XuM1XmPBFQ/1EwGeAHCSCwBP536P5m94ljf8pbOv9WQe4IkAT+Ch3O/h41MAHsfDYOcVfvPX4nV4vbt/+Ozr8oLd0j8OgMfpYfB3H/USP3D7+5rncJILAE/nBXkiwBN4KLD1tt/w5Hd7ys/wvx3Bv9FjXvL7Hw/AwDO9JV8HLL8d4EHxu8D4rdzvda752nM8y2v+2v5rPY5n+8YG/vp4c+73FnwVsPqGxesDr3f+617mJK9TPovX4wUrb/rXvwX84R+9/gaH7xQ/8i4f8TNfx3N4UPldYPpWXpCvA1bffvLVGQDiTVjzvx3Bv1H9tnzVL/ntP/j+93hrnukNXuc7Puz3f/51FwBb7/SHH/TrP/xa4n7Hv/z8y37rH//yZ3wWALzSb4yv/dc8y95b/upvvfOvvduLcb93euVv+eDf+unXe/LH3wS8Lk95PTjxMk9ZvCovxBfN3/rr//Cb37z7Uvjwx3/9Y/jSl/vEv+CBNt75jz/w13/ktcwLUP/gg3/vF17/1k/e4Vte45t++29+6DO2X5//7aj8W73iX33opyY89MO538+81zd9Y/cOn/3GAF95z7d+6/wD3+jNuN97XPMhHwQ7X8AVL/Pbb/C6v/yKPNMPfeqbZPmAr+dZ9Ksf8R3fwtbXfATAqy6Wrwe83p+/2owX4tF//J4fAY/5npfm+777Pd4bZj/8cu/8Fzs8wFfc/W3fNn//N3sTnr/ym2/xLcy++BPgYfd8KPDS3/Ug/rdD5t/u8Intxht4gItPfvGN33y9r/pogDvufok5z+Hep5x42Izn79ITH7PNc1g+fvPhhX+ds0956LU8Pz/2jj/wrgB33P0Sc16AN/i9Fffe8eIzAO69fbj5JvG/HpV/h82X5TmdeEWe5aabeC7XXssLdOwVeS6Ll+Vf7cwZnr+nchMAN93EC3XttVxx7bX8n0Dl/4E//v7vu+WV+X+J4D9aPTnnf5i//bnX/MWef8n2Cf7vQeaq/8MIrvq/jOCq/8sIrvq/jOCq/8sIrvq/jOCq/8sIrvq/jOCq/8sIrvq/jOCq/8sIrvq/jOCq/8sIrvq/jOCq/8sIrvq/jOCq/8sI/rP85g/ygk3f//v8K935/U/mP8Cl7/8rntOl7/8r/s8i+I82/NrjAPjS9+QFW7/HN/Cv9Ffv8Vv8B7jzPX6E53TXe/ww/2cR/Ee78IZfyVX/UxBc9X8ZlX/Z2V/7+5Mv+zqCX7v0dgL4wzvefAPu+62/23q51xfwsxuv/we/dukzTgLc/ss8/UfhLRbAM37jSY9+pwUAT/m9J9z46i/Lc8o/+8O7jj3mLXrgp0Yue/M7/vqVHgRw5x+8xGN4prt+6akv83pcsferf7t4qTcqAPzGH85f/VV+5/zb8pye+hvP8CPf9BrAP3bDq//Z7xy88hsDcPEX/uHFXpcHuvgL//Bir8sVwy//7fRSb7QBwIXf/NvZy7xxAPzh792z8+DXv5n/paj8i375ve47tT+85Xed5Be/+vdeHZjedvMd4Cc+6PyZw6M3/77j8IE3vfrXzKYPOwnwxx/Kb/8uPP0m+I23clt/xe+chPySzx6vOzd99JcHD/TuP1Svu3D0Yj/zMHivfS57xvjO7/VdAF/4jX/MM/3u2527Zu+GjwfgT9/lacfXy1f/wZth/YHf213zSZ/wF3/0tjyH73w/XTtcOPndbwH5Tm/xq593bM/v/23A497iaSfH/ut4tse95VNPjv3XAfCUd/6LzbL3mB95CeCX3/fuU8P+6/zQtfi9v3fj+t3zL/1X/C9F8C+5++31e+d2P+ZnPx7em+8B+OV731P85Ts+6on37X3DL3w6wN//3O8d7N4EwDvczvuM43gT5Pv+2N7+x//9VwHf8anveN9dlz74q76X5/B6v7u8/eCHn/KRwPlhGIbf7F/ymhd7zR/dBQ5/4KVfiSsO3sG/c++ld/gYgKO3PfvT5y992R++D/CN3/vuF+946q/8Ps/lwT98cPf5vzj5/pcAfuPXn7R776t9+x9BvvPdP3bu4me/H8+S73Lnj567+DnvB+B3+Ztv2b3w/U9/uxGe/NbX/s253e/9/Y+B3/reDzn/lHN3fhL/WxH8S77k8CtfncVXvvz3PJmXeukfPQK+R+8FH7fxE4+kfOg7f8s5YP2dr1635jwnf96blO7zT/w6HH3aS3zXaRZf++gv4Dm832tU9E4f8Ivnoeu67hnvePrn53zI0fcDP3rpA3mmb73vc1+T/otfAuCb7/zUt4ru49/6N36L/OLrvm2Th3znmufyuu+0AS/75ff9MkD+6CM48/n8Gvzs333Y26t8+JvzLD/3tx/2Diof9hYAP/Pn7/2BtbzbRzz5e+GT8idekniPD/jhp/IE3mwON7wz/1sR/Ev+rHsHgHfLv4T33vtpuPBzr/1gpj98+XL2vvvufdnpCcDJ1+L5eBNg9tBnwOPPvt7F++677/zLPW3Jc9j/sa/8tE99Ek8F4PybLX/uZniba78V+Natd+OZ/pR3AnhHgD/jXQHejT/nzvveZA687IN4bu1Xv/EzPvUXeRrAS9wEPIbb4E95R4B34ln+lHcEeCeAP+fdAN6NP4PffbHts/fdd+9L+3G8JJ/0U/v8L0blX/K0GzqAB/NUeNdP+J535YfX7wVPH377Gi57xqvDTTwf5QzAxhKexFd/NQDc/kge4Ac/bPf6k7NznANYv+1Tf+plgf79vvCPXuVv//j9d3imp2+eArgF4Gn1RoAH81SewU0A3HiW5/S4t3rKiTNba84CXAewwRKezi0At/AsT+cWgFsAnsqDAB7E0zh//vw1XPYMXv1zP/9tyyu+/YfO+V+Kyr9k4xCAJRtw5s1+7o6bvmfr7WHGG346lz0K6HihZnzk2wPATTzAbe/34j/8MPjyTwDw+//u17wFAB/4Jd/6Kt/KB3G/jaEVYAWw0cYCLNnkBJcA2OO5vPP533xt8dcvw3PaYAmw5Fk2WAIsATZZAizZoNcrfwmXPRQ+48N/6Td/+eN+5Pc7/nei8i95+K+dOw08jocD7/3T3/9Wf/o+m3Dz9p2vwfMVJM/lMVx6DZ7XH64+/mHA4wH4nO//iI/ksge96Y9+wfe/7Mtzv4f+9lMfCTwB4OG//fiXAR7Hw3hI/BXApafxnM793fu/DvB4nstDeeKDgSfwLA/liQ8BngDwMB7/WOBxPJztm257teB+J971Xcc3+Y3ffx3+dyL4l7yFvxrY+7aTrw686TXf8z28F6B3/IcfBGDguZzq7uG5PPJlf/jvARh4IHMJuO2HAb7vc9/8q3imDzl6+0sfxLO8JV8H7H8XwFvwVcDwdf0bs/EOv/crwBceASx/+Bd5JrMHTF/Bc3lzfZ1h+iae5c3j6wzTNwG8WXxNA38VbwHvfOc3AjCZAaB7I1b8L0XlX/JB3/CFq7e87/Pv/ZrjQPeuX337Q18T4Mt++b3+5I1P3fZHP3o7z6m82q9/7EPivbZ4tvJtr/rqn/TK/a2/evev8gCvsfkZG4/9u09/yD/Abe+/8eY/DPDWm/BGD/2j7XfhWd7yVb6+vv35zz12L/CWr/N99d2OvvLvPu6h8Hm/8Zbv+ZA/eMpLPhU4/y6PeVOuOPNyP/4Fb3zXl694Li/1zj/0Hu+//qojnuUl3/kH3/0D1l91CPCS7/Mdb/Wh9dt/4W1eCz77pz/qb9/y2tv/7HuesvHZf/kOj9z6qy+77lX4X4rKv6T7/Q/8qq/gxHe9NwDv/dWH7ymAE3/9cd/0tXDqrXlu3/bxP3RfvtUWD/Cyf/2hn57wkA/lgW76/g98D/rPPvEhsDsMHwzAMzYh3v9T33WbZ9EvvvvXfHX/bm/11gA//zHf+V1sfOnHAY/4s4/7+fmr/+ZbXQdc4BHc7wfe+dM/XW/99S/Jc/muxff8QHmj739FnuU759/zg+UNv/8VAb75xi/9BfqP+SJg488+5Tu/DY6/Wcejv//9gVf/uuP8L4XMv+zwcScfKp7H+JSLN9xceNEcPaHdcCPPZfXE5aOP8zw+5Jv/4mV5oPNPe/EFz7R+3OIRhWdZXfuKvwZf+9F/9nLcL59674Nu5vnYe8Kjd3gO+49/9A7PND1xekwPAExPO3v9zR3AHXflg67nfy1k/se592Ev9zv8y/LCafCnfMk3fTC8jX6Sq54PZP6H+eXf/Kmn/drr8i9bHX+TR69//89e6fcrPO7aU1z1fFD5n+a3vuOG73xdXgTdx/zuX+cjv/SjK/BYrnq+kLnq/zCCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCq/4vI7jq/zKCf8m57/97/vWe8v138G91z/c/nv84v/UDwOO+/z7+XyL4lzzlPX4W+LW/4l/lt9/jL/lX+/tfGwEe9x6/xL/H0a89iWf7ivcEfvE9nsD/SwT/kq1XuB54o0/nX+XMKxznX+1L33CP/wC3v+E381yue4Vt/l+i8i958T/l3+Ct3or/Sd793fn/icq/5PxvvMRjzv4Wd/8ovP5Jrnjybz5Dj3yz0wCc+8XHv9jrbf7yY14Cht/5q3uve6k3EPD0P3v1G7jw6y/2qN/9vdnrvzzPdvFX/277pd8ggD++7W3v+/XHPeIdt3mmX3gGP7PFI14GGH77D7be8KUAWP/a3x295JttcL8/ecbbnP2Nf3j4O+4A8IzffdyZV3kVWP9s/1YAv7z3xud+mSf9KLxNx7M98W9e5wz3/s7LPOi3/2DrjV4SgPWv/e3qJd58wf9tyPwL/vhVvuBTf+91JxX4o5fnsm/+EF27vnj6e98E+Iu3uf3U2H3tu33yF8GL/8P8zL3D6/3UNnz7B/zMW/Lnr/ApT/ip47vlqz+c+/3uu91x4mj9+t93HbzLD//qO660fPjv3MAVD3u6K3z4V/3m633+7/3qsd3uW98b+Lt3/9vt/vyjf/QleKZ3+8Ffeeellg/77ZuAr/+k5bUX1+/3jT0f/g1f/2HwI+/8jj/y7R/cIuDCNpe9+S81+PJP+J3X5Nfe8At++9eP7Xbf/p7A377732335x/zYy/G/2kEL4rXGPUm4zi+PFc87EcP777wp9vvdwDTu+z+3NmLX/qBALzX3x7dtveFv/GFPMvXLM5e/IcbPuUcz7T7toe/cv7SZ//6hwDwXt+xv/d5T/kinump78494/hVwBfefP7iX574+AM4fNOzv3rp3G+ff7fGs7zXt+3vf8FTvxD4yY94gzvu3vvk7/g6+IqX+bi/4ikf+LBv4/3/gY8ax3Gb5/UFD7lw8S+Of/whHLzp+V+7dO43z75b4/80gn+DN3iHBbzCl9z9a/CjT/6YN1e879sD8AkvIWaf8prfx7Nc/12neezHHPwxz/TV5z/vDTX7rDf46b8A+OS3rfVTb/41nsfDv/kEL/Mh5/8SvuKOb3kD8Vpf8Hc/y7N84tvV8skP+nXIj3vwD95A/4Wv/IVm9iOzdzr7Tusf2eGFeOQ3HedlP/jsX8GX3fltry9e5/P+5uf5P43Kv0X79afc0+7jafBXvA3A23wPAHf/5h2X2LtrueCZXq8HHsNtPNOf824A7/Zrf/ZywBsD8ag/4Hm8YQEew23wO4uXP2v84vz923C/NwHiUb9j3Xbrex0egF/+j+++gUd8y7u8xL1f83K8MG8UwGO4DX5342XOGr84f/9W/F9G5d/gb9/maSeu2VxxFp7BjQA3AvA5XzTdcLy70+dv4pmuA1iw5Jmeeuw4wIN4GsB1AIslz+N6gA2W8KTlDVz2DJ7lOoDF2noS3/M9APCMG+Cdv/tXXvMjeKGuA9hgCU86uoHLbuP/NCr/Bu946XdeQ/zpKwEn2DsD7AH82me/49ddA+/5fTyLeE6bKwtYsgEg/kWz0z/JZdfyLOKZet77fQHgxYA/+k392d+/BC+a2TU/zmXX8X8alRdNJM9y1xM/9DWBxwM8jL96GPBXAL/FZ18DPJ4X7GF/8bSHAY/j4TwfheS5PPbnHnktL8hjOfca3O/iu2z/wNu/059tQsH8Sx77i48+w/8DBC+a6+7hWcweMH4lwDvPvvgA7vtaAHMJ+M0/5wV7S74SWH7T5uvyfFzHvTyXd+LTAfDI87rmdX7xDwAYwO9723e88dc//sOB67iHf8k7+dMB8AjP+OE/5/8qKi+a1/yhD3lMeYdrALjxJX7oxV//zi9pALd8yme/4tsNP/yKtwne+Eve/4uv/f3PfdQTeYHe5Wu+0e+4+yVP/ZwbeD5e44s/8G0XL/kaPMC7/dC33/W+t9z799/zHa/K8/rWl3nDj3+NzWf85t/8CV/30x/51rz3b3z3674HWy/zM594c3xAzwvx7j/0rXe99y33/t33fM8r8Xvv8SEvz/9RVF40X87PfVt7xWu47Iff+ZPR23/9ywJ81i3f8rUv/jGv8OPXwWt9+ae/BTvf9etP5AWKX//wb/0mtr/uw3h+3vRLv+Ozjj7iNXign/qKL/pFmL/+zTwfD/+7D/+CBje9D3/xiS/3pcA3/dmHvuKj+L5P+N77/J49L4R+5su/+Odh/vo38n8aMv8G7an3PfgmHuCbP+Rn3wLYe0K82IIXbvm47YcH/wq+7fYztyx4AVZPXN1wk/g38G23n7llwf9tyPz7nDsZcM+rHDx1h6v+56Hy7/Sd3/J619/+03vfusNV/wNR+Xd6nb/9wwtn3uBjX4mr/idC5qr/wwiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4Kr/ywiu+r+M4F/jGWtekItnATi4i/8sz1hz1b8Wwb/kvV/9Nd7mmyYAeM2/537feJHn8M2fCsDPvycP9JRPe9O3AHja2z749f4E+MlXevj77gF3vOvDHvudPNAPP5XLnvbqjefvNf6Bq/61CP4lf/UGX/F6n/klAPATj+J+n34fz8/rfw0PdNvRY/8UGN/skX/1MW98N3/8Xl/0p4t3hYuv9Nhf+9FH8kBf+/dcdvQH5qr/MAT/ooe+4oe/98/z2X/zqW/Nz17kx37h297+E/b4hqPP+4g/5r5PfuuPPwvrz3m7rzKXPeO3WH/Ekz/yHX4WAF73q94E4O+f9nkn3vxVv4ufesvXPfmFv/Q0vvoVP/2hL/7qAExf9U5v+6Vrfvzp3/oRP8MD/Oi7v+vP0D72XsiPv4u/fp/3+SOA33y/d/h2c+vn/Pn7vdufcdW/jOBFMW7xfe/96A/ie+7jdz5k98P/9uN41e713/pBl15h55O2X3Pgff78Y/31XPbkn2b6+o99k7d81yfwAGMp0P89Qw+d/4HffbkPft1POQBguPQh7/UbH81Lnnzlt34xnu0Lv+I93/OTfrTc+V3waz9z/R2v+3Lv96UX4Mc+6M0//Hu/gHu+4qvf7SXf5ICr/kVU/kU/9dQ//e0fgQ96Ty571U+gf09epnuVR/Hlr/ypvMov/+ZL/+Qdp1/td3m2z3lZfuJ3H82zvfixb/iIv/nVV+EN3v1Jj/gK38ftX/l17/9p7/7TABufvX/vJ73zNz3y2Eu+Hs82fMHfPowv+ap3/JD3/8T41g/Ut7/Jh/PQm+BzvvZN+NbX+XSGb9563W/9u1fhqn8JlX9Rnb3N1z4cXowrHgmnLnLZP/zmY+C+27evOw0veTfP8kg4tcsDbPzkh37OI9628aaf/Nq8xcOu4dhrvhtf9+i9HeDwnZ70MJ1thedw6/ItzLryWv1vvPivfDNPeUm44TTTEz+ykrsrbtiCU7tc9S+i8i96i/cAoOMK8Swn3+2rAf7hksUuzyae26v8lfWmrwmf+Ik+9z0vzkNOwgkf7ADfxZN48i8ZmQc4EX+6BaAP/raXfosznNiFtkfd+bGXBkBc9aIh+Dc6/TR42x94Mty598gTP8R9P84Lczf60T/+IKZzDB/1Ng/hPX/uEt//8BsAjo7srwZOP50HOPNqn5e0J8F7/to3fiC80Q9f5DvX8HZfuMZP4H5/8U1c9cIR/Bt96vte9yOv9kWv+Qov9lq73fd83Cu8yRvz/PyFXv8+PQo+5vrrPvPXT3D0yIdd074V3uLtHv3iX/+DALzXXQ95qeuBj/q6az6fyzpJv/x9f/7QV37QD8Pxt9t6bXizN3/0K/7ZjfBl5SGv8qAv5n5//vVc9cIh8++Rt8+vBaa7bxIv1F1xHcBw+/UbAKzO3iQua7ff0PN87J27YQ681Wt9LMBFHQfg6O5rt7jqRYbM/2R/9uPf94Qdrvo3o/I/2v4Nf7TDVf92yFz1fxjBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxnBVf+XEVz1fxn/CN53ZpfqXN0eAAAAAElFTkSuQmCC" width="480" height="280"/>
  <g class="scribe-xn3jur-text">
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="33" y="57" font-size="35" textLength="118" lengthAdjust="spacingAndGlyphs">Reading</tspan> <tspan class="scribe-xn3jur-word" x="162" y="51" font-size="25" textLength="134" lengthAdjust="spacingAndGlyphs">Machines</tspan></text>
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="31" y="107.6" font-size="17" textLength="37" lengthAdjust="spacingAndGlyphs">The</tspan> <tspan class="scribe-xn3jur-word" x="74.63" y="110.58" font-size="21.4" textLength="50.73" lengthAdjust="spacingAndGlyphs">quick</tspan> <tspan class="scribe-xn3jur-word" x="131" y="106.6" font-size="17" textLength="58" lengthAdjust="spacingAndGlyphs">brown</tspan> <tspan class="scribe-xn3jur-word" x="196" y="107.4" font-size="18" textLength="27" lengthAdjust="spacingAndGlyphs">fox</tspan> <tspan class="scribe-xn3jur-word" x="229" y="109.8" font-size="21" textLength="57" lengthAdjust="spacingAndGlyphs">jumps</tspan></text>
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="32" y="144.2" font-size="14" textLength="43" lengthAdjust="spacingAndGlyphs">over</tspan> <tspan class="scribe-xn3jur-word" x="81" y="143.4" font-size="18" textLength="31" lengthAdjust="spacingAndGlyphs">the</tspan> <tspan class="scribe-xn3jur-word" x="118" y="145" font-size="20" textLength="38" lengthAdjust="spacingAndGlyphs">lazy</tspan> <tspan class="scribe-xn3jur-word" x="167" y="145.2" font-size="19" textLength="35" lengthAdjust="spacingAndGlyphs">dog,</tspan> <tspan class="scribe-xn3jur-word" x="210" y="143.4" font-size="18" textLength="34" lengthAdjust="spacingAndGlyphs">and</tspan> <tspan class="scribe-xn3jur-word" x="257" y="143.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">does</tspan></text>
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="31" y="180.2" font-size="19" textLength="14" lengthAdjust="spacingAndGlyphs">it</tspan> <tspan class="scribe-xn3jur-word" x="51.67" y="183.08" font-size="23.3" textLength="52.66" lengthAdjust="spacingAndGlyphs">again</tspan> <tspan class="scribe-xn3jur-word" x="110" y="179.8" font-size="16" textLength="22" lengthAdjust="spacingAndGlyphs">on</tspan> <tspan class="scribe-xn3jur-word" x="139.26" y="178.8" font-size="17.94" textLength="31.47" lengthAdjust="spacingAndGlyphs">the</tspan> <tspan class="scribe-xn3jur-word" x="176" y="180" font-size="15" textLength="42" lengthAdjust="spacingAndGlyphs">next</tspan> <tspan class="scribe-xn3jur-word" x="225" y="179.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">line.</tspan></text>
    <text class="scribe-xn3jur-line" transform="rotate(0.53 111.5 236.5)"><tspan class="scribe-xn3jur-word" x="30.99" y="239.14" font-size="12" textLength="44" lengthAdjust="spacingAndGlyphs">Printed</tspan> <tspan class="scribe-xn3jur-word" x="77.98" y="238.65" font-size="13" textLength="12" lengthAdjust="spacingAndGlyphs">in</tspan> <tspan class="scribe-xn3jur-word" x="94.99" y="238.62" font-size="12" textLength="29" lengthAdjust="spacingAndGlyphs">1996</tspan> <tspan class="scribe-xn3jur-word" x="127.99" y="238.59" font-size="11" textLength="12" lengthAdjust="spacingAndGlyphs">at</tspan> <tspan class="scribe-xn3jur-word" x="144" y="241.28" font-size="16" textLength="48" lengthAdjust="spacingAndGlyphs">Leyden.</tspan></text>
  </g>
</svg>
